# iosaCal

./: CODE_OF_CONDUCT.md  README.md  pyproject.toml  setup.cfg
docs/: conf.py  contributing.txt  dates.csv  google_colab.txt  how.txt  index.ipynb  install.txt  literature.txt  load_dates_from_file.ipynb  quantiles_demo.ipynb  quickstart.ipynb  requirements.txt  whatsnew.txt
iosacal/: hpd.py  plot.py
tests/: test_cli.py  test_core.py
